# praticas-so

./: README.md  pyproject.toml
pratica_geren_ent_saida/: elevator.py  main.py
pratica_geren_memoria/: memoria.py  mini_simulador_alocacao_men.py  processo.py
pratica_geren_process/: algoritmo_peterson.py  escalonamento_round_robin.py  pyproject.toml  semaforo.py
