[tool.poetry]
name = "pratica_geren"
version = "0.1.0"
description = "Atividades praticas realizadas na disciplina de SO"
authors = ["FernandaSzAdr <fsandrade25@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"

[tool.poetry.dev-dependencies]
ipdb = "^0.12.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
